# fast_onnxruntime_server

./: .gitignore  Cargo.toml  LICENSE  README.md
gen_onnx/: resnet18_train.py
py_client/: main.py
src/: main.rs
