[package]
name = "fast_onnxruntime_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tract-onnx = { path = "./tract/onnx" }
image = "0.24.1"
axum = "0.5.15"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.13.1"
